--- a/src/app/pages/product-admin/product-admin.component.html
+++ b/src/app/pages/product-admin/product-admin.component.html
@@ -1,104 +1,139 @@
-
 <div class="card">
-  <p-toast></p-toast>
-  <p-toolbar class="mb-4 gap-2">
-    <ng-template pTemplate="left">
-      <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
-      <button pButton pRipple [label]="'Delete'" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
-    </ng-template>
-  </p-toolbar>
-
   <p-table
     #dt
-    [value]="products"
-    [rows]="10"
-    [paginator]="true"
     [globalFilterFields]="['name', 'country.name', 'representative.name', 'status']"
-    [tableStyle]="{ 'min-width': '75rem' }"
+    [paginator]="true"
     [rowHover]="true"
-    dataKey="productId"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rows]="10"
     [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '75rem' }"
+    [value]="products"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    dataKey="productId"
   >
     <ng-template pTemplate="caption">
       <div class="flex align-items-center justify-content-between">
-        <h5 class="m-0">Manage Products</h5>
-        <span class="p-input-icon-left">
+        <h5 class="text-xl m-0">Manage Products</h5>
+        <div class="toolbar-items">
+          <button (click)="openNew()" class="p-button-success mr-2" icon="pi pi-plus" label="New" pButton
+                  pRipple></button>
+
+          <span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
+                    <input (input)="dt.filterGlobal($event.target.value, 'contains')" pInputText placeholder="Search..."
+                           type="text"/>
                 </span>
+        </div>
       </div>
     </ng-template>
     <ng-template pTemplate="header">
       <tr>
-        <th pSortableColumn="name" style="min-width:15rem">Name <p-sortIcon field="name"></p-sortIcon></th>
-        <th pSortableColumn="basePrice">Price <p-sortIcon field="basePrice"></p-sortIcon></th>
-        <th pSortableColumn="category" style="min-width:10rem">Category <p-sortIcon field="category"></p-sortIcon></th>
-
+        <th pSortableColumn="name" style="min-width:15rem">Name
+          <p-sortIcon field="name"></p-sortIcon>
+        </th>
+        <th pSortableColumn="basePrice">Price
+          <p-sortIcon field="basePrice"></p-sortIcon>
+        </th>
+        <th pSortableColumn="category" style="min-width:10rem">Category
+          <p-sortIcon field="category"></p-sortIcon>
+        </th>
+        <th pSortableColumn="genre" style="min-width:10rem">Genre
+          <p-sortIcon field="genre"></p-sortIcon>
+        </th>
+        <th pSortableColumn="releaseDate" style="min-width:10rem">Release Date
+          <p-sortIcon field="releaseDate"></p-sortIcon>
+        </th>
+        <th style="min-width:10rem">Attributes
+          <p-sortIcon field="attributes"></p-sortIcon>
+        </th>
 
         <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-product>
+    <ng-template let-product pTemplate="body">
       <tr>
         <td>{{ product.name }}</td>
         <td>{{ product.basePrice | currency: 'USD' }}</td>
         <td>{{ product.category }}</td>
+        <td>{{ product.genre }}</td>
+        <td>{{ product.releaseDate }}</td>
         <td>
-          <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2" (click)="editProduct(product)"></button>
-          <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
+          <div *ngFor="let a of product.attributes">
+            <p>
+              {{a.attributeName}} : {{a.attributeValue}}
+            </p>
+          </div>
+        </td>
+        <td>
+
+          <button (click)="deleteProduct(product)" class="p-button-rounded p-button-warning" icon="pi pi-trash" pButton
+                  pRipple></button>
         </td>
       </tr>
     </ng-template>
     <ng-template pTemplate="summary">
-      <div class="flex align-items-center justify-content-between">In total there are {{ products ? products.length : 0 }} products.</div>
+      <div class="flex align-items-center justify-content-between">In total there
+        are {{ products ? products.length : 0 }} products.
+      </div>
     </ng-template>
   </p-table>
 </div>
-<p-dialog [(visible)]="productDialog" [style]="{ width: '450px' }" header="Product Details" [modal]="true" class="p-fluid">
+<p-dialog [(visible)]="productDialog" [modal]="true" [style]="{ width: '450px' }" class="p-fluid"
+          header="Product Details">
   <ng-template pTemplate="content">
     <div class="field">
       <label for="name">Name</label>
-      <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus />
-      <small class="p-error" *ngIf="submitted && !product.name">Name is required.</small>
+      <input [(ngModel)]="product.name" autofocus id="name" pInputText required type="text"/>
+      <small *ngIf="submitted && !product.name" class="p-error">Name is required.</small>
     </div>
 
+    <div class="field">
+      <label>Category</label>
+      <input [(ngModel)]="product.category" autofocus id="category" pInputText required type="text"/>
+    </div>
+    <div class="field">
+      <label>Genre</label>
+      <input [(ngModel)]="product.genre" autofocus id="genre" pInputText required type="text"/>
+    </div>
+    <div class="field">
+      <label>Release Date</label>
+      <input [(ngModel)]="product.releaseDate" autofocus id="releaseDate" pInputText required type="text"/>
+    </div>
+
+    <div class="field">
+      <label for="basePrice">Price</label>
+      <p-inputNumber [(ngModel)]="product.basePrice" currency="USD" id="basePrice" locale="en-US"
+                     mode="currency"></p-inputNumber>
+    </div>
 
 
     <div class="field">
-      <label class="mb-3">Category</label>
-      <div class="formgrid grid">
-        <div class="field-radiobutton col-6">
-          <p-radioButton id="category1" name="category" value="Accessories" [(ngModel)]="product.category"></p-radioButton>
-          <label for="category1">Accessories</label>
+      <label>Attributes</label>
+
+      <div *ngFor="let a of product.attributes" class="formgrid grid">
+        <div class="field col">
+          <label for="attributeName">Attribute Name</label>
+          <input [(ngModel)]="a.attributeName" autofocus id="attributeName" pInputText required type="text"/>
         </div>
-        <div class="field-radiobutton col-6">
-          <p-radioButton id="category2" name="category" value="Clothing" [(ngModel)]="product.category"></p-radioButton>
-          <label for="category2">Clothing</label>
+        <div class="field col">
+          <label for="attributeValue">Attribute Name Value</label>
+          <input [(ngModel)]="a.attributeValue" autofocus id="attributeValue" pInputText required type="text"/>
         </div>
-        <div class="field-radiobutton col-6">
-          <p-radioButton id="category3" name="category" value="Electronics" [(ngModel)]="product.category"></p-radioButton>
-          <label for="category3">Electronics</label>
-        </div>
-        <div class="field-radiobutton col-6">
-          <p-radioButton id="category4" name="category" value="Fitness" [(ngModel)]="product.category"></p-radioButton>
-          <label for="category4">Fitness</label>
-        </div>
+
       </div>
+      <button (click)="addNewAttribute()" class="p-button-text" icon="pi pi-plus" label="Add" pButton pRipple>
+      </button>
     </div>
 
-    <div class="formgrid grid">
-      <div class="field col">
-        <label for="basePrice">Price</label>
-        <p-inputNumber id="basePrice" [(ngModel)]="product.basePrice" mode="currency" currency="USD" locale="en-US"></p-inputNumber>
-      </div>
-    </div>
+
   </ng-template>
 
   <ng-template pTemplate="footer">
-    <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-    <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveProduct()"></button>
+    <button (click)="hideDialog()" class="p-button-text" icon="pi pi-times" label="Cancel" pButton pRipple></button>
+    <button (click)="saveProduct()" class="p-button-text" icon="pi pi-check" label="Save" pButton pRipple></button>
   </ng-template>
 </p-dialog>
 
+
+<p-toast></p-toast>
 <p-confirmDialog [style]="{ width: '450px' }"></p-confirmDialog>
